completata implementazione con virtual threads